[tool.poetry]
name = "mistral-sae"
version = "0.1.2"
description = "Sparse AutoEncoder to decode Mistral LLM"
authors = ["seonglae <sungle3737@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.10,<4.0"
mistral-inference = "^1.4.0"
transformers = "^4.45.2"
torch = { version = "^2.4.1" }
xformers = { version = "^0.0.28" }
mistral-common = "^1.4.4"
mistralai = "^1.1.0"
transformer-lens = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
